<resources>
    <string name="app_name">DCTimer</string>
	<string name="scrambling">scrambling…</string>
	<string name="solving">solving…</string>
	<string name="initing">Initializing</string>
	<string name="scramble_view">scramble view</string>
	<string name="session">"Session "</string>
	<string name="option">Options</string>
	<string name="inspect">INSPECTING</string>
	<string name="solve">SOLVING</string>
	<string name="time">time</string>
	<string name="no_penalty">No penalty</string>
	<string name="penalty_2">"+2"</string>
	<string name="penalty_dnf">DNF</string>
	<string name="note">"Comment: "</string>
	<string name="session_average">Session Mean(</string>
	<string name="sesname">Rename session</string>
	<string name="show_time">"Time: "</string>
	<string name="shape">shape:</string>
	<string name="stt_timer">TIMER</string>
	<string name="wcainsp">WCA inspection</string>
	<string name="time_format">Time format</string>
	<string name="input_time">Entering in times with</string>
	<string name="timer_upd">Timer updating</string>
	<string name="accuracy">Timer accuracy</string>
	<string name="time_tap">"Timer start delay time(sec): "</string>
	<string name="mul_phase">Multi-phase timing</string>
	<string name="simulss">Emulate a stackmat with two hands</string>
	<string name="drop_to_stop">Drop to stop</string>
    <string name="sensitivity">"Sensitivity: "</string>
    <string name="sen_low">Low</string>
    <string name="sen_mid">Medium</string>
    <string name="sen_high">High</string>
    <string name="sen_ultra">Ultra</string>
    <string name="stt_stackmat">STACKMAT SETTINGS</string>
	<string name="stt_usess">Use Stackmat timer</string>
	<string name="stt_samprate">Sampling rate(Hz)</string>
	<string name="stt_invert">Invert signal</string>
	<string name="stt_ssvalue">"Stackmat value: "</string>
	<string name="stt_scramble">SCRAMBLE</string>
	<string name="scrsize">"Scramble size: "</string>
	<string name="hidescr">Hide scramble while timing</string>
	<string name="egtrain">EG traning scramble</string>
	<string name="stt_stats">STATISTICS</string>
	<string name="confirm_time">Prompt when new time detected</string>
	<string name="printscr">Print scramble(s) in statistics</string>
	<string name="ra0">RA0:</string>
	<string name="ralen">Length:</string>
	<string name="ra1">RA1:</string>
	<string name="sel_session">Select session automatically while scramble type changes</string>
	<string name="stt_tools">TOOLS</string>
	<string name="optcross">3x3x3 Solvers</string>
	<string name="sq1shape">Solve square-1 cube shape</string>
	<string name="cube2_layer">Solve 2x2x2 first layer</string>
	<string name="stt_scheme">COLOR SCHEMES</string>
	<string name="stt_csn">NxNxN</string>
    <string name="stt_csp">Pyraminx</string>
    <string name="stt_csq">Square-1</string>
    <string name="stt_csw">Skewb</string>
    <string name="mmxcolor">Megaminx</string>
	<string name="stt_share">SHARE</string>
    <string name="stt_sina">Sina Weibo</string>
    <string name="login">" Login "</string>
	<string name="logout">" Logout "</string>
	<string name="stt_interface">INTERFACE</string>
	<string name="full_screen">Full screen</string>
	<string name="timer_size">"Timer size: "</string>
	<string name="timer_font">Timer font</string>
	<string name="bgcolor">Background colour</string>
	<string name="bgpicture">Background picture</string>
	<string name="bgopacity">Opacity</string>
	<string name="text_color">Text colour</string>
	<string name="best_time">Best time colour</string>
	<string name="worst_time">Worst time colour</string>
	<string name="best_rolling_avg">Best rolling average colour</string>
	<string name="row_spacing">"Row spacing of times list: "</string>
	<string name="stt_hardw">HARDWARE</string>
	<string name="screenon">Always keep screen on</string>
	<string name="screengrey">Allow to dim the screen</string>
	<string name="stt_vibra">Haptic feedback</string>
	<string name="stt_vib_time">Hapic feedback duration</string>
	<string name="stt_screen_ori">Screen orientation</string>
	<string name="reset_all">Reset All</string>
	<string name="select_color">Select a colour…</string>
	<string name="scheme_cube">NxNxN Color Schemes</string>
    <string name="scheme_pyrm">Pyraminx Color Schemes</string>
    <string name="scheme_sq">"Square-1 Color Schemes"</string>
    <string name="scheme_skewb">"Skewb Color Schemes"</string>
    <string name="scheme_reset">Reset</string>
    <string name="scr_eg0">EG0(CLL)</string>
    <string name="scr_eg1">EG1</string>
    <string name="scr_eg2">EG2</string>
    <string name="scr_pi">Pi</string>
    <string name="scr_h">H</string>
    <string name="scr_u">U</string>
    <string name="scr_t">T</string>
    <string name="scr_l">L</string>
    <string name="scr_s">Sune</string>
    <string name="scr_as">Anti-sune</string>
    <string name="scr_n">None</string>
	<string name="menu_inscr">Inport Scrambles</string>
    <string name="menu_outscr">Export Scrambles</string>
    <string name="menu_share">Recommend to friends</string>
    <string name="menu_weibo">Share to Weibo</string>
    <string name="menu_about">About</string>
    <string name="menu_exit">Exit</string>
    <string name="not_support">Unavailable for this scramble type</string>
	<string name="again_exit">Press again to exit.</string>
	<string name="copy_to_clip">Copy to clipboard successfully.</string>
	<string name="illegal">Illegal input.</string>
	<string name="not_exist">File not exists.</string>
	<string name="rsauth">Logout succeeded.</string>
	<string name="sr_not_support">The sampling rate can\'t work on this device.</string>
	<string name="not_install">You haven\'t installed Weibo client.</string>
    <string name="conning">Connecting to the network…</string>
    <string name="net_error">Network error.</string>
    <string name="lastest">This is the latest version.</string>
    <string name="outscr_success">Export Scramble successfully.</string>
    <string name="outscr_failed">Export Scramble failed.</string>
    <string name="save_success">Save succeeded.</string>
    <string name="save_failed">Save failed.</string>
    <string name="saved">Database saved at </string>
    <string name="path_not_exist">Path not exists.</string>
    <string name="path_illegal">Illegal path.</string>
    <string name="file_error">File error.</string>
    <string name="import_failed">Import database failed.</string>
	<string name="import_success">Import database succeeded.</string>
	<string name="sta_avg">"Detailed statistics: Average of len"</string>
	<string name="sta_mean">"Detailed statistics: Mean of len"</string>
	<string name="sta_session_mean">Detailed statistics: Session Mean</string>
	<string name="stat_title">"Generated by DCTimer on "</string>
	<string name="stat_solve">"Cubes Solved: "</string>
	<string name="stat_avg">"Average: "</string>
	<string name="stat_mean">"Mean: "</string>
	<string name="stat_best">"Best Time: "</string>
	<string name="stat_worst">"Worst Time: "</string>
	<string name="stat_best_avg">"Best average of len: "</string>
	<string name="stat_best_mean">"Best mean of len: "</string>
	<string name="stat_list">Individual Times:</string>
	<string name="ses_avg">"Session Average: "</string>
	<string name="ses_mean">"Session Mean: "</string>
	<string name="btn_ok">OK</string>
	<string name="btn_cancel">Cancel</string>
	<string name="btn_close">Close</string>
	<string name="btn_copy">Copy</string>
	<string name="btn_save">Save</string>
	<string name="btn_upgrade">Upgrade</string>
	<string name="btn_download">Download</string>
	<string name="btn_back">Run in background</string>
	<string name="copy_scr">Copy scramble</string>
	<string name="delete_time">Delete</string>
	<string name="havenew">"New version detected: "</string>
	<string name="no_times">There is no time to delete.</string>
	<string name="confirm_del_last">Delete this time?</string>
	<string name="confirm_clear_session">Reset all times in this session?</string>
	<string name="confirm_reset">Are you sure?</string>
	<string name="time_dnf">Time: DNF</string>
	<string name="confirm_adddnf">Add this time?</string>
	<string name="con_rsauth">Are you sure?</string>
	<string name="path_dupl">File already exists. Overwrite?</string>
	<string name="auth_success">Auth succeeded.</string>
	<string name="auth_failed">Auth failed.</string>
	<string name="auth_cancel">Auth canceled.</string>
	<string name="send_sucess">Share succeeded.</string>
    <string name="send_failed">Share failed.</string>
    <string name="send_cancel">Share canceled.</string>
	<string name="crnt_scr">Current scramble</string>
	<string name="scr_len">"Length: "</string>
	<string name="outscr_mun">"Number of scramble(1~100): "</string>
    <string name="scr_path">"Path: "</string>
    <string name="scr_filename">"File name: "</string>
    <string name="def_fname">"scramble.txt"</string>
    <string name="abt_main">Introduction</string>
    <string name="abt_timer">Timer</string>
    <string name="abt_scr">Scramble</string>
    <string name="abt_stat">Statistics</string>
    <string name="abt_shortc">Keyboard Shotcuts</string>
    <string name="abt_more">More</string>
    <string name="abt_title">"DCTimer"</string>
    <string name="abt_1">" - DCTimer is a Rubik's cube timer for Android: smartphone and tablet. It supports scrambles, timing, statistics, and many other features.\n - Timer: Support wca inspection, multi-phase timing, input time through keyboard, confirm OK/+2/DNF. Timer accuracy is 1 millisecond.\n - Scramble: Support all wca scramble include scramble view, and lots of unofficial and training scrambles.\n - Statistics: Show average/mean of 3/5/12/50/100 and session mean or average. Copy results to clipboard, or save it to a text file.\n - More: Support optimal cross, xcross and SQ1 cube shape solver etc. Share your solves to friends. Customize background colour or image."</string>
    <string name="abt_2">" - 正常计时：按下屏幕计时区在抬起的时候开始计时，再次按下计时区（或打乱区或按返回键）停止计时，并记录成绩。\n - 启动延时：与stackmat等计时器一样支持启动延时，即在启动之前须要按住屏幕一段时间，启动延时的时间可设置。\n - WCA观察：提供WCA的15秒倒计时功能，超过15秒在17秒内启动计时会加罚2秒，超过17秒则直接DNF；观察阶段的+2和结束计时阶段的+2可叠加。\n - 分段计时：支持2～6阶段分段计时，可设置阶段数。每次复原过程中，需要多次按下屏幕，以记录分段时间。\n - 外部输入：提供手动输入和Stackmat记录时间，其中Stackmat支持二代计时器（包括PRO，可精确到三位小数）\n - 确认成绩：每次计时结束后确认无惩罚/+2/DNF，如果不设置确认，则默认按无惩罚记录成绩。\n - 计时精度和时间格式：有0.01秒和0.001秒可选，系统内部使用1毫秒的精确度；超过1分钟的时间可显示成(hh:)mm:ss.xy(z)，也可显示成ss.xy(z)。\n - Time update: For some reasons, timer updateing may be set to: none, seconds or real-time."</string>
    <string name="abt_3">" - Supports all WCA's official scrambler, including random-state scrambler of 2x2, 3x3, pyraminx, square-1 and skewb. Scramble view is available for all wca scramblers. The most of other unofficial scramblers, such as 3x3 LL training, are from qqtimer, cstimer and PPT (prisma puzzle timer).\n - All scramble programs kindly provided by Jaap Scherphuis (all puzzles), Syoji Takamatsu (Pyraminx), Lucas Garron (Pyraminx), Michael Gottlieb (Pyraminx, SQ1), Tom van der Zanden (2x2), Conrad Rider (2x2), Clément Gallet and Stefan Pochmann (Megaminx), Herbert Kociemba (3x3) and Shuang Chen(3x3, SQ1)."</string>
    <string name="abt_4">" - 成绩分组：适用于不同魔方的计时，最多有15个分组可切换。\n - 时间列表：成绩列表的第一列，单次最快和最慢用不同的颜色标出；每个时间均可修改无惩罚/+2/DNF，或者删除。\n - 滚动平均0：成绩列表的第二列，可显示3次/5次/12次/50次平均（包括是否去尾）每个平均都可以查看详细的统计信息，并可复制；用不同的颜色标出最快平均。\n - 滚动平均1：成绩列表的第三列，可显示5次/12次/50次/100次平均（包括是否去尾）每个平均都可以查看详细的统计信息，并可复制；用不同的颜色标出最快平均。\n - 分组平均：成绩列表最下方的按钮显示还原次数、平均及标准差，点击该按钮会显示出详细的统计信息，并可复制。"</string>
    <string name="abt_5">" - Solve 3x3x3 cross or xcross, Square-1 shape etc.\n - Change background color or picture.\n - Share the results to your friend.\n - What's new in v0.6.12 (2014.5.8)\nFixed bugs."</string>
    <string name="abt_6">" - Q: Scramble type to SQ1.\n - W, E, R, T, Y, U: Scramble type to 2x2 ~ 7x7.\n - P, M, K: Scramble type to pyra/megaminx/clock.\n - N: New scramble.\n - Z: Delete last time.\n - A: Delete all times in current session.\n - D: Change last time to OK/+2/DNF"</string>
</resources>