<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outscr_mun"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_scrnum"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_select"
            android:digits="0123456789"
            android:textColor="#000"
            android:inputType="number"
            android:padding="3dip" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:gravity="center_vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scr_path"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_scrpath"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_margin="2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_select"
            android:inputType="text"
            android:textColor="#000"
            android:padding="3dip" />

        <ImageButton
            android:id="@+id/btn_browse"
            android:layout_width="49dip"
            android:layout_height="40dip"
            android:background="@drawable/folder"
            android:contentDescription="@string/app_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="5dip"
        android:paddingRight="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scr_filename"
            android:textColor="#000"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/edit_scrfile"
            android:layout_width="0dip"
            android:layout_height="40dip"
            android:layout_marginLeft="2dip"
            android:layout_weight="1"
            android:background="@drawable/edittext_select"
            android:inputType="text"
            android:textColor="#000"
            android:padding="3dip"
            android:text="@string/def_fname" />
    </LinearLayout>

</LinearLayout>