<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/st_time"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/st_scr"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp" />

            <RadioGroup
                android:id="@+id/st_penalty"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:checkedButton="@+id/st_pe1"
                android:gravity="center"
                android:orientation="horizontal" >

                <RadioButton
                    android:id="@+id/st_pe1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/no_penalty" />

                <RadioButton
                    android:id="@+id/st_pe2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penalty_2" />

                <RadioButton
                    android:id="@+id/st_pe3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/penalty_dnf" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/note"
                    android:textSize="16sp" />

                <EditText
                    android:id="@+id/etnote"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="text" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>